<resources>
    <string name="error_no_internet">No internet connection available</string>
    <string name="error_no_data">No data available.</string>
    <string name="error_history_no_data_no_connection">No internet connection. Could not load data.</string>
    <string name="main_dialog_registration_title">Registration…</string>
    <string name="main_dialog_registration_text">Client is being registered. Please wait…</string>
    <string name="main_dialog_reload_title">Reloading…</string>
    <string name="main_dialog_reload_text">Reloading data; please wait…</string>
    <string name="preferences">Settings</string>
    <string name="preferences_category_test">Preferences</string>
    <string name="preferences_category_nerd_mode">Nerd mode</string>
    <string name="preferences_nerd_mode">Nerd mode</string>
    <string name="preferences_nerd_mode_sum">Turn on advanced settings</string>
    <string name="preferences_enable_qos">QoS tests</string>
    <string name="preferences_enable_qos_sum">Enable QoS tests</string>
    <string name="preferences_location_settings">Location</string>
    <string name="preferences_location_settings_sum">Manage the permissions regarding the Location tracking</string>
    <string name="preferences_no_gps">No GPS</string>
    <string name="preferences_no_gps_sum">Do not use GPS during test</string>
    <string name="preferences_tag">Tag</string>
    <string name="preferences_tag_sum">Add a custom test tag to every test</string>
    <string name="preferences_loop_mode">Loop</string>
    <string name="preferences_loop_mode_sum">Test will run in a loop mode</string>
    <string name="preferences_loop_mode_max_tests">Loop max tests</string>
    <string name="preferences_loop_mode_max_tests_sum">Maximum number of tests to run if loop mode is active (0 = run forever)</string>
    <string name="preferences_loop_mode_min_delay">Loop delay</string>
    <string name="preferences_loop_mode_min_delay_sum">Time in seconds between two tests if loop mode is active</string>
    <string name="preferences_loop_mode_movement">Loop movement</string>
    <string name="preferences_loop_mode_movement_sum">Movement in meters after which a test in loop mode is triggered</string>
    <string name="preferences_loop_mode_gps">Use GPS when loop mode is active</string>
    <string name="preferences_loop_mode_gps_sum">Use GPS between two tests in loop mode</string>
    <string name="preferences_ndt">NDT</string>
    <string name="preferences_ndt_sum">Activate extended test</string>
    <string name="preferences_ic">Publish personal data</string>
    <string name="preferences_ipv4_only">IPv4 only</string>
    <string name="preferences_ipv4_only_sum">Never use IPv6</string>
    <string name="preferences_anonym_mode">Anonymous mode</string>
    <string name="preferences_anonym_mode_sum">Disassociate all measurements from the user</string>
    <string name="preferences_category_developer">DEVELOPMENT</string>
    <string name="preferences_category_loop_mode">Loop mode</string>
    <string name="preferences_category_developer_control_server">Control server</string>
    <string name="preferences_category_developer_map_server">Map server</string>
    <string name="preferences_category_developer_qos_server">QoS server</string>
    <string name="preferences_category_developer_debug">Debugging</string>
    <string name="preferences_dev_control_override">Override control server</string>
    <string name="preferences_dev_control_override_sum">Activate custom control server settings</string>
    <string name="preferences_dev_control_host">Control host</string>
    <string name="preferences_dev_control_host_sum">Override address of the control server</string>
    <string name="preferences_dev_control_port">Control port</string>
    <string name="preferences_dev_control_port_sum">Override port of the control server</string>
    <string name="preferences_dev_control_ssl">Control server SSL</string>
    <string name="preferences_dev_control_ssl_sum">Use encrypted connection to control server</string>
    <string name="preferences_dev_map_override">Override map server</string>
    <string name="preferences_dev_map_override_sum">Activate custom map server settings</string>
    <string name="preferences_dev_map_host">Map host</string>
    <string name="preferences_dev_map_host_sum">Override address of the map server</string>
    <string name="preferences_dev_map_port">Map port</string>
    <string name="preferences_dev_map_port_sum">Override port of the map server</string>
    <string name="preferences_dev_map_ssl">Map server SSL</string>
    <string name="preferences_dev_map_ssl_sum">Use encrypted connection to map server</string>
    <string name="preferences_dev_qos_ssl">QoS server SSL</string>
    <string name="preferences_dev_qos_ssl_sum">Use encrypted connection to QoS server</string>
    <string name="preferences_dev_debug_sysout">Store error output in file</string>
    <string name="menu_button_start">START</string>
    <string name="menu_button_start_again">RUN AGAIN</string>
    <string name="menu_button_start_again_details">Run again</string>
    <string name="menu_button_title_page">Home</string>
    <string name="menu_button_map">Map</string>
    <string name="menu_button_history">History</string>
    <string name="menu_button_help">Help</string>
    <string name="menu_button_statistics">Statistics</string>
    <string name="menu_button_settings">Settings</string>
    <string name="menu_button_badges">Badges</string>
    <string name="menu_button_survey">Survey</string>
    <string name="menu_button_about">Info</string>
    <string name="menu_button_log">Logging</string>
    <string name="menu_button_share">Share</string>
    <string name="menu_button_netstat">Netstat</string>
    <string name="news_title">News</string>
    <string name="news_no_message">No message text.</string>
    <string name="about_version_title">Version</string>
    <string name="about_clientid_title">Client UUID</string>
    <string name="about_clientid_toast">Client UUID has been copied to clipboard.</string>
    <string name="about_web_title">Web</string>
    <string name="about_email_title">Email</string>
    <string name="about_email_sending">Sending email…</string>
    <string name="about_terms_title">Terms of Service</string>
    <string name="about_dev_title">Development</string>
    <string name="about_gms_legal_title">Google Play</string>
    <string name="about_gms_legal_line1">Google Play Services Legal Notice</string>
    <string name="about_test_counter_title">Test Counter</string>
    <string name="terms">Privacy Policy and Terms of Service</string>
    <string name="terms_accept_button">Agree</string>
    <string name="terms_accept_button_continue">Continue</string>
    <string name="terms_decline_button">Decline</string>
    <string name="terms_ic_header">Publish personal data</string>
    <string name="terms_ndt_header">Optional, more comprehensive NDT-Test</string>
    <string name="terms_ndt_back_button">Back</string>
    <string name="terms_ndt_accept_button">Continue</string>
    <string name="terms_ic_accept_text"><b> Publish personal data. </b></string>
    <string name="terms_ndt_accept_text"><b> I wish to run the optional NDT-Test. </b></string>
    <string name="loop_notification_ticker">Measurements will be performed periodically. You can check the results in the app.</string>
    <string name="loop_notification_title">Loop mode is active</string>
    <string name="loop_notification_text">Touch to stop Loop mode %d</string>
    <string name="loop_mode_stop">Stop loop mode</string>
    <string name="loop_started">Loop mode started.</string>
    <string name="loop_already_active">Loop mode is already active.</string>
    <string name="test_mbps">Mbps</string>
    <string name="test_ms">ms</string>
    <string name="test_dbm">dBm</string>
    <string name="test_location_km_h">km/h</string>
    <string name="test_location_m">m</string>
    <string name="test_location_sat">satellites</string>
    <string name="test_location_gps">GPS</string>
    <string name="test_test_server">Test server</string>
    <string name="test_location_network">Network</string>
    <string name="test_location_dir_n" translatable="false">N</string>
    <string name="test_location_dir_e" translatable="false">E</string>
    <string name="test_location_dir_s" translatable="false">S</string>
    <string name="test_location_dir_w" translatable="false">W</string>
    <string name="test_signal_strength">Signal</string>
    <string name="test_ping">Ping</string>
    <string name="test_packet_loss">Packet loss</string>
    <string name="test_notification_text">The test is still running in the background.</string>
    <string name="test_dialog_error_title">Error…</string>
    <string name="test_dialog_error_text">There has been an error during the test.</string>
    <string name="test_dialog_error_control_server_conn">Connection to test server cannot be established.</string>
    <string name="test_toast_error_text_qos">There has been an error during the QoS test.</string>
    <string name="test_dialog_abort_title">Abort…</string>
    <string name="test_dialog_abort_text">Do you really want to abort the running test?</string>
    <string name="test_dialog_abort_yes">Abort test</string>
    <string name="test_dialog_abort_no">Continue test</string>
    <string name="history_button_sync">Sync</string>
    <string name="history_button_filter">Filter</string>
    <string name="history_device">Device</string>
    <string name="history_type">Access</string>
    <string name="history_date">Date</string>
    <string name="history_packet_loss">Packet loss:</string>
    <string name="history_jitter">Jitter:</string>
    <string name="history_filter">FILTER</string>
    <string name="history_filter_networks">NETWORK TYPE</string>
    <string name="history_filter_devices">DEVICE</string>
    <string name="history_filter_result_number">NUMBER OF RESULTS</string>
    <string name="history_filter_result_number_25">Show only the 25 newest results</string>
    <string name="history_context_menu_delete">Remove this measurement?</string>
    <string name="history_delete_item_progress_info">The request is being processed by the server. Please wait...</string>
    <string name="history_delete_item_progress_title">Disassociation</string>
    <string name="history_delete_item_failed">An error occurred during the request. This measurement could not be disassociated. Please try again later.</string>
    <string name="result_measurement">MEASUREMENT</string>
    <string name="result_net">NETWORK</string>
    <string name="result_details">DETAILS</string>
    <string name="result_category_tests">TESTS</string>
    <string name="preferences_dont_show_menu_on_exit">No menu on close</string>
    <string name="preferences_dont_show_menu_on_exit_sum">Do not show application menu before closing it.</string>
    <string name="result_page_title_qos">QoS</string>
    <string name="show_detailed_results">Detailed results</string>
    <string name="preferences_loop_mode_disable_qos">Disable QoS tests in loop mode</string>
    <string name="preferences_loop_mode_disable_qos_sum">QoS tests will not be started in loop mode</string>
    <string name="qos_result_performed">Performed</string>
    <string name="qos_result_passed">Passed</string>
    <string name="qos_result_failed">Failed</string>
    <string name="history_quality">QoS</string>
    <string name="history_test_date">Test/date</string>
    <string name="history_down">Down</string>
    <string name="history_up">Up</string>
    <string name="history_ping">Ping</string>
    <string name="history__persisten_uuid_disabled_string">Please enable "Persistent Client UUID" to enable the measurement history</string>
    <string name="logging_showlogs">Show logs</string>
    <string name="get_log_file">get log file</string>
    <string name="delete_logs">delete logs</string>
</resources>