<?xml version="1.0" encoding="utf-8"?><!--
    Copyright 2014-2017 Specure GmbH
   
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
   
      http://www.apache.org/licenses/LICENSE-2.0
   
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_title_page"
        android:icon="@drawable/ic_action_home"
        android:showAsAction="ifRoom"
        android:title="@string/menu_button_title_page" />

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_action_history"
        android:showAsAction="ifRoom"
        android:title="@string/menu_button_history" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_action_help"
        android:showAsAction="ifRoom"
        android:title="@string/menu_button_help" />

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="ifRoom"
        android:title="@string/menu_button_about" />

    <item android:id="@+id/action_stats"
        android:icon="@drawable/ic_action_stat"
        android:title="@string/menu_button_statistics"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_action_map"
        android:showAsAction="ifRoom"
        android:title="@string/menu_button_map" />

    <item
        android:id="@+id/action_stats"
        android:icon="@drawable/ic_action_stat"
        android:showAsAction="ifRoom"
        android:title="@string/menu_button_statistics" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom"
        android:title="@string/menu_button_settings" />

    <item
        android:id="@+id/action_netstat"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom"
        android:title="@string/menu_button_netstat" />

    <item
        android:id="@+id/action_log"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom"
        android:title="@string/menu_button_log" />

</menu>
