<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2014-2017 Specure GmbH
  Copyright 2013-2015 alladin-IT GmbH
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/historyListBox2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- android:background="@drawable/history_box" -->
    <RelativeLayout
        android:id="@+id/history_fragment__content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/columnLabelRow"
            style="@style/listViewHistoryLabelRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center">

            <TextView
                android:id="@+id/col0"
                style="@style/QoSTheme.TextView.Medium.TitlePage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/history_test_date" />
            <!--android:text="@string/history_date"-->

            <TextView
                android:id="@+id/col1"
                style="@style/QoSTheme.TextView.Medium.TitlePage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/history_quality"
                android:visibility="visible" />

            <!--<TextView-->
            <!--android:id="@+id/col3"-->
            <!--style="@style/listViewHistoryLabelRowItem"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight=".18"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/history_date" />-->

            <TextView
                android:id="@+id/col2"
                style="@style/QoSTheme.TextView.Medium.TitlePage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/history_ping" />

            <TextView
                android:id="@+id/col3"
                style="@style/QoSTheme.TextView.Medium.TitlePage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/history_down" />

            <TextView
                android:id="@+id/col4"
                style="@style/QoSTheme.TextView.Medium.TitlePage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/history_up" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyList"
            style="@style/listViewHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/columnLabelRow" />

        <!--android:layout_below="@+id/columnLabelRow" -->

    </RelativeLayout>


    <Button
        android:id="@+id/infoButton"
        android:textColor="@color/app_text_color"
        android:layout_width="wrap_content"
        android:layout_margin="8dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@android:color/white"
        android:textAllCaps="false"
        android:visibility="gone"
        android:text="@string/history__persisten_uuid_disabled_string" />

    <TextView
        android:id="@+id/infoText"
        style="@style/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>
