<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="4dp">

            <ImageView
                android:id="@+id/performed_tests_image"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_margin="@dimen/margin_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/qos_performed" />


            <ImageView
                android:id="@+id/passed_tests_image"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_margin="@dimen/margin_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/performed_tests_image"
                android:src="@drawable/qos_passed" />


            <ImageView
                android:id="@+id/failed_tests_image"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_margin="@dimen/margin_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passed_tests_image"
                android:src="@drawable/qos_failed" />

            <TextView
                android:id="@+id/qos_result_performed"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:layout_constraintStart_toEndOf="@+id/performed_tests_image"
                app:layout_constraintTop_toTopOf="parent"
                android:minHeight="16dp"
                android:layout_height="wrap_content"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qos_result_passed"
                app:layout_constraintStart_toEndOf="@+id/performed_tests_image"
                app:layout_constraintTop_toTopOf="@+id/passed_tests_image"
                app:layout_constraintBottom_toBottomOf="@+id/passed_tests_image"
                android:layout_margin="@dimen/margin_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="16dp"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qos_result_failed"
                app:layout_constraintStart_toEndOf="@+id/performed_tests_image"
                app:layout_constraintTop_toTopOf="@+id/failed_tests_image"
                app:layout_constraintBottom_toBottomOf="@+id/failed_tests_image"
                android:layout_margin="@dimen/margin_small"
                android:layout_width="wrap_content"
                android:minHeight="16dp"
                android:textSize="11sp"
                android:textStyle="bold"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/QoSTheme.TextView.Medium.TitlePage"
                app:layout_constraintStart_toEndOf="@+id/qos_result_performed"
                app:layout_constraintTop_toTopOf="@+id/performed_tests_image"
                app:layout_constraintBottom_toBottomOf="@+id/performed_tests_image"
                android:layout_margin="@dimen/margin_small"
                android:id="@+id/qos_result_performed_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qos_result_performed"
                android:minHeight="16dp"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"/>

            <TextView
                style="@style/QoSTheme.TextView.Medium.TitlePage"
                app:layout_constraintStart_toEndOf="@+id/qos_result_performed"
                app:layout_constraintTop_toTopOf="@+id/passed_tests_image"
                app:layout_constraintBottom_toBottomOf="@+id/passed_tests_image"
                android:layout_margin="@dimen/margin_small"
                android:id="@+id/qos_result_passed_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="16dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:text="@string/qos_result_passed"
                android:textStyle="bold" />

            <TextView
                style="@style/QoSTheme.TextView.Medium.TitlePage"
                app:layout_constraintStart_toEndOf="@+id/qos_result_performed"
                app:layout_constraintTop_toTopOf="@+id/failed_tests_image"
                app:layout_constraintBottom_toBottomOf="@+id/failed_tests_image"
                android:layout_margin="@dimen/margin_small"
                android:id="@+id/qos_result_failed_txt"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:text="@string/qos_result_failed"
                android:minHeight="16dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_fragment__test_server_title"
            style="@style/QoSTheme.TextView.Medium.TitlePage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/result_page_title_qos" />

        <Button
            android:id="@+id/show_detailed_qos_result_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/rounded_button_bckg"
            android:ellipsize="end"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/show_detailed_results"
            android:textAllCaps="true"
            android:textColor="@color/app_text_color_light" />

        <TextView
            android:id="@+id/qos_result_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:textColor="@color/app_main_button_text_color"
            android:textSize="23sp"
            android:textStyle="bold" />



    </LinearLayout>

</LinearLayout>